Simple_Flask_App_with_NetworkPolicy/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend        # Routes traffic to frontend pods
  ports:
  - port: 5000           # ClusterIP port
    targetPort: 5000     # Container port

---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
  - port: 5001
    targetPort: 5001

---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: db
  ports:
  - port: 5002
    targetPort: 5002
